Modification du site pour inclure les graphes des volumes

--- a/web_flask/templates/index.html
+++ b/web_flask/templates/index.html
@@ -38,8 +38,17 @@
 		{{ graphPriceBNB|safe }}
 		
 	
-    <!-- Afficher le graphique -->
-		{{ graphPriceBTC|safe }}
+    <h1>Évolution du Volumes des Bitcoin</h1>
+	
+		{{ graphVolumeBTC|safe }}
+		
+		{{ graphVolumeETH|safe }}
+	
+		{{ graphVolumeUDST|safe }}
+		
+		{{ graphVolumeSOL|safe }}
+		
+		{{ graphVolumeBNB|safe }}
 	
 </body>
 </html>
