--- a/web_flask/templates/bandeau.html
+++ b/web_flask/templates/bandeau.html
@@ -1,6 +1,7 @@
 <div class="bandeau">
 	<h1>CryptoFrontiers</h1>
-	<a href="{{ url_for('index') }}">Index</a>
+	<a href="{{ url_for('index') }}">Acceuil</a>
+	<a href="{{ url_for('ListeCrypto') }}">Cryptos</a>
 	<a href="{{ url_for('PricePage') }}">Prix</a>
 	<a href="{{ url_for('VolumePage') }}">Volume</a>
 </div>
