--- a/web_flask/templates/VolumePage.html
+++ b/web_flask/templates/VolumePage.html
@@ -1,27 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Graphiques des Volumes des Cryptomonnaies</h1>
+<h1 class="titrePage">Graphiques des Volumes des Cryptomonnaies</h1>
 
+{% for graph in listGraph: %}
 <div>
-    <h2>Bitcoin (BTC)</h2>
-    {{ graphVolumeBTC | safe }}
+    {{ graph | safe }}
 </div>
-<div>
-    <h2>Ethereum (ETH)</h2>
-    {{ graphVolumeETH | safe }}
-</div>
-<div>
-    <h2>Tether (USDT)</h2>
-    {{ graphVolumeUSDT | safe }}
-</div>
-<div>
-    <h2>Solana (SOL)</h2>
-    {{ graphVolumeSOL | safe }}
-</div>
-<div>
-    <h2>Binance Coin (BNB)</h2>
-    {{ graphVolumeBNB | safe }}
-</div>
+{% endfor %}
 
 {% endblock %}
