--- a/web_flask/templates/bandeau.html
+++ b/web_flask/templates/bandeau.html
@@ -3,4 +3,6 @@
 	<a href="{{ url_for('ListeCrypto') }}">Crypto</a>
 	<a href="{{ url_for('PricePage') }}">Prix</a>
 	<a href="{{ url_for('VolumePage') }}">Volume</a>
+	<button><a href="{{ url_for('Connexion') }}">Connnexion</a></button>
+	<button><a href="{{ url_for('Inscription') }}">Inscription</a></button>
 </div>
