--- a/web_flask/templates/ListeCrypto.html
+++ b/web_flask/templates/ListeCrypto.html
@@ -21,7 +21,7 @@
                 <td>{{ row['rank'] }}</td>
                 <td><a href="{{ url_for('GraphCrypto', id=row['crypto_id']) }}">{{ row['symbol'] }}<br><strong>{{ row['name'] }}</strong></a></td>
                 <td>{{ '{:,.2f}'.format(row['price']) }} €</td>
-                <td></td>
+                <td>{{ row['marketCap'] }}</td>
                 <td>{{ '{:,.0f}'.format(row['volume']) }}</td>
             </tr>
             {% endfor %}
