--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="service-card">
         <h3>Prévisions du cours</h3>
-        <p>Profitez de nos outils d'analyse et des prévisions sur l'évolution des prix des cryptos. Grâce à l'IA et à l'analyse technique, vous pouvez anticiper les mouvements du marché et investir avec plus de confiance.</p>
+        <p>Profitez de nos outils d'analyse et des prévisions sur l'évolution des prix des cryptos. Grâce à notre analyse technique, vous pouvez anticiper les mouvements du marché et investir avec plus de confiance.</p>
     </div>
 </section>
 
