--- a/app/templates/Connexion.html
+++ b/app/templates/Connexion.html
@@ -3,15 +3,15 @@
 {% block content %}
 {% with messages = get_flashed_messages(with_categories=false) %}
     {% if messages %}
-        <p style="color: red;">{{ messages[0] }}</p>
+        <p class="flash" style="color: red;">{{ messages[0] }}</p>
     {% endif %}
 {% endwith %}
-<h2>Connexion</h2>
-<form method="POST">
-    <label for="username">Nom d'utilisateur :</label>
+<h2 class="texte-form">Connexion</h2>
+<form method="POST" class="form-co">
+    <label class="label-co" for="username">Nom d'utilisateur :</label>
     <input type="text" id="username" name="username" required><br><br>
     
-    <label for="password">Mot de passe :</label>
+    <label class="label-co" for="password">Mot de passe :</label>
     <input type="password" id="password" name="password" required><br><br>
 
     <button type="submit">Se connecter</button>
